Added Shortlink module
